# mitty

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.web  alembic.ini  crontab  deploy.sh  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
infra/: .terraform.lock.hcl  backend.tf  cloud-init.yaml  dns.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
migrations/: phase1_tables.md  phase4_practice_items.sql
mitty/: __init__.py  __main__.py  chunking.py  config.py  db.py  models.py  storage.py
mitty/ai/: __init__.py  client.py  coach.py  errors.py  escalation.py  prompts.py  rate_limiter.py  retriever.py  trust.py
mitty/api/: _supabase.py  app.py  auth.py  dependencies.py  middleware.py  schemas.py
mitty/canvas/: classify.py  client.py  extract.py  fetcher.py
mitty/guides/: compiler.py  protocols.py  sources.py
mitty/mastery/: concepts.py  scheduler.py  updater.py
mitty/planner/: allocator.py  classify.py  generator.py  scoring.py
mitty/practice/: __init__.py  evaluator.py  generator.py
tests/: test_chunking.py  test_cli.py  test_config.py  test_db.py  test_models.py  test_phase1_gap_coverage.py  test_storage.py
tickets/: canvas-scraper-plan.md  homework-viewer.md  phase1-foundation.md  phase2-ingestion.md  phase3-planner.md  phase4-retrieval-mastery.md  phase5-ai-roles.md  phase6-block-guides.md  phase6-evaluation.md  phase7-hardening.md  phase7-struggle-verification.md  phase8-mastery-hub.md  phase8-subject-protocols.md  supabase-storage.md  test-prep-engine.md
web/: index.html
(+122 files in other folders)
