[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mitty"
version = "0.1.0"
description = "Canvas LMS assignment & grade scraper"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "supabase>=2.0",
    "sqlalchemy>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.27",
    "PyJWT>=2.8",
    "jinja2>=3.1",
    "tiktoken>=0.7",
    "anthropic>=0.52",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8",
    "beautifulsoup4>=4.12",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
